[tool.poetry]
name = "sdmxtools"
version = "0.1.0"
description = ""
authors = ["arnos-stuff <bcda0276@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sdmx = "^0.2.10"
sdmx1 = "^2.7.1"
typer = {extras = ["all"], version = "^0.7.0"}
sortedcollections = "^2.1.0"
aiohttp = "^3.8.4"

[tool.poetry.scripts]
build = "sdmxtools.build_toc:run"
cloudbuild = "sdmxtools.cloudbuild.remote_build_toc:run"


[tool.poetry.group.gcloud.dependencies]
google = "^3.0.0"
google-cloud-storage = "^2.7.0"
google-cloud-tasks = "^2.13.0"
functions-framework = "^3.3.0"
google-cloud-run = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
